@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Use map's name on the slaying page.
+ utils/mapper.c
+Nicolas Weeger, 2008-02-05
+
 Add exits leading to a map. Changes tag to be coherent.
  utils/mapper.c
  utils/templates/map.template map_with_exit.template
